--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<div class="row bg-light">
         <div class="col-xs-12 col-sm-4">
             <div class="card">
-                <a class="img-card" href="index1.html">
+                <a class="img-card" href="detail/index.html">
                     <img src="img/v9.jpg"/>
                 </a>
                 <br />
